# Work

./: LICENSE  README.md  book_list.txt
MyTest-Cplusplus/: 1974d.cpp  1977a.cpp  1977b.cpp  CMakeLists.txt
POSIX_prograrming/: CMakeLists.txt  P_tar  example.tar  main.c
POSIX_prograrming/POSIX/: P_a64l.c  P_locale.c  P_tar.c  P_total.h  P_trace.c  print_epoch.c
Small_executor/: Cargo.toml
Small_executor/src/: lib.rs
WASM-1/: index.js  math.wasm  math.wat  package-lock.json  package.json  server.js
WASM-1/public/: test.html
WASM-2/: README.md  package-lock.json  package.json
WASM-2/assembly/: index.ts
WASM-2/tests/: index.js
WASM-3/: Cargo.toml
WASM-3/src/: lib.rs
actix-net/: Cargo.toml  README.md
actix-net/actix-macros/: Cargo.toml
actix-net/actix-macros/src/: lib.rs
actix-net/actix-rt/: Cargo.toml
actix-net/actix-rt/src/: arbiter.rs  lib.rs
actix-net/actix-service/: Cargo.toml
actix-net/actix-service/examples/: clone.rs
actix-net/actix-service/src/: lib.rs  then.rs
async-task_test/: Cargo.toml
async-task_test/src/: lib.rs
blocking_test/: Cargo.toml
blocking_test/src/: lib.rs
calculate/: Cargo.toml  bin  main.c
calculate/src/: lib.rs
catsay-tui/: Cargo.toml
catsay-tui/src/: main.rs
concurrency_test/: Cargo.toml
concurrency_test/src/: lib.rs
concurrency_test/src/ticker/: mod.rs  ticker.rs
concurrency_test/tests/: 1.rs
design_patterns/src/generic/: enum_replace.rs  error_wrap.rs  ffi_cstr_handle.rs  ffi_error_handle.rs  match.rs  node.rs  non_exhaustive_attr.rs  phantom_attr.rs  raii.rs  trait_obj.rs
epoll-example/: Cargo.toml
epoll-example/src/: main.rs
khrust-code/code/jsint_bindgenhello/: package.json  (+1 more)
linux_sys_programming/: CMakeLists.txt  account_on  account_on.c  acct_view.c  anon_mmap  check_passwd  core-1714978592-simpel_pipe.24078  demo_SIGWINCH  demo_inotify  demo_siganlIO  direct_read  display_env  dump_utmpx  epoll_input  error_function.c  error_function.h  fifo_seqnum_client  fifo_seqnum_server  get_num.c  inc.h  int_quit  m_advice  main.c  make_zombie  make_zombie.c  mem_lock  mem_segement  mmcat  mprotect_t  nano_sleep  new_iter  nftw_dir_tree  no_echo  ouch  pacct  pipe_ls_wc  pipe_sync  poll_pipe  popen_glob  ppoll  (+17 more)
linux_sys_programming/sys_test/: libc_version.h  total.h
linux_sys_programming/sys_test/alterIO/: demo_signalIO.c  epoll_input.c  poll_pipe.c  ppoll.c  tty_functions.c  tty_functions.h
linux_sys_programming/sys_test/dirctory_and_link/: Note.md  nftw_dir_tree.c  unlink.c
linux_sys_programming/sys_test/file_features/: Note.md
linux_sys_programming/sys_test/file_io_buf_test/: Note.md  direct_read.c
linux_sys_programming/sys_test/file_io_test/: Note.md  copy.c  fcntl_getfl_test.c  readv.c
linux_sys_programming/sys_test/flock/: create_pid_file.c  create_pid_file.h  region_locking.c  region_locking.h
linux_sys_programming/sys_test/fs_test/: Note.md
linux_sys_programming/sys_test/inotify/: Note.md  demo_inotify.c
linux_sys_programming/sys_test/loginacct/: dump_utmpx.c
linux_sys_programming/sys_test/mem_test/: Note.md  free_and_sbrk.c
linux_sys_programming/sys_test/mmap/: anon_mmap.c  mmcat.c  t_mmap.c
linux_sys_programming/sys_test/pipe/: pipe_ls_wc.c  pipe_sync.c  popen_glob.c  print_wait_status.c  print_wait_status.h  simple_pipe.c
linux_sys_programming/sys_test/pipe/fifo/: fifo_seqnum.h  fifo_seqnum_client.c  fifo_seqnum_server.c
linux_sys_programming/sys_test/process_test/: Note.md  display_env.c  long_jmp.c  mem_segement.c  set_jump_vars.c
linux_sys_programming/sys_test/pty/: pty_fork.c  pty_master_open.c  pty_master_open_bsd.c  script.c  unbuffer.c
linux_sys_programming/sys_test/signal/: Note.md  int_quit.c  ouch.c  sig_functions.c  sig_functions.h  sig_queue.c  sig_receiver.c  sig_sender.c  sigmask_longjmp.c  signalfd_sigval.c  sigwaitinfo.c
linux_sys_programming/sys_test/sys_config_test/: Note.md  sys_conf.c
linux_sys_programming/sys_test/syscall_test/: perror_test.h
linux_sys_programming/sys_test/thread/: Note.md  simpl_thread.c  thread_cancel.c  thread_sig_test.c  thread_sig_test2.c
linux_sys_programming/sys_test/timer/: Note.md  nanosleep.c  ptmr_sigev_thread.c  real_timer.c  timed_read.c  timerfd.c
linux_sys_programming/sys_test/tty/: demo_SIGWINCH.c  new_intr.c  no_echo.c
linux_sys_programming/sys_test/user_group/: check_passwd.c
linux_sys_programming/sys_test/vmem/: m_advice.c  mem_lock.c  mprotect_t.c
mio-0.8.11/examples/: tcp_server.rs
mytest/: Cargo.toml
mytest/.criterion/fib 20/base/: estimates.json  sample.json  tukey.json
mytest/.criterion/fib 20/change/: estimates.json
mytest/.criterion/fib 20/new/: estimates.json  sample.json  tukey.json
mytest/benches/: example.rs
mytest/src/: lib.rs
mytest/src/mio/: mod.rs  test1.rs
mytest/test/: 103687a.rs  11b.rs  14c.rs  1972a.md  1972a.rs  1974a.rs  1974b.rs  1974c.rs  1974c_runtime_error.rs  2a.md  2a.rs  2b.md  2b.rs  3c.rs  4d.rs  7b.rs  7c.rs
mytest/test/futures/: 4.rs  5.rs  6.rs  7.rs
mytest/test/lifetime/: 1.rs  2.rs  3.rs
mytest/type-name-derive/: Cargo.toml
mytest/type-name-derive/src/: lib.rs
plugin_demo/: Cargo.toml
plugin_demo/src/: lib.rs
plugin_demo/tests/: test.rs
plugin_test/: Cargo.toml
plugin_test/src/: main.rs
reactor-example/: Cargo.toml
reactor-example/src/: executor.rs  main.rs  poll.rs  reactor.rs
ruby/: test1.rb  test10.rb  test11.rb  test2.rb  test3.rb  test4.rb  test6.rb  test7.rb  test8.rb  test9.rb
rust_ffi_py/: data.jsonl  main.py  main_test.py  readme.sh
rust_ffi_py/json-sum-benchmark/: Cargo.toml
rust_ffi_py/rust_json/: Cargo.toml
sys_link_space/: Cargo.toml
sys_link_space/system_link_test/: Cargo.toml
sys_link_space/system_math_example/: Cargo.toml
tokio-1.37.0/: Cargo.toml  Note.md
tokio-1.37.0/my_tokio_test/: Cargo.toml
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
web_warp/: Cargo.toml
web_warp/handle-errors/: Cargo.toml
web_warp/src/: main.rs  store.rs
work/D/: functions.c  test  test.d  test.txt
work/java/: CallerTest.java  README.md  Test.c  Test.h  Test.java
yew-app/: Cargo.toml
(+45 files in other folders)
