[package]
name = "concurrency_test"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
cuckoofilter = "0.5.0"
evmap = "10.0.2"
arc-swap = "1.7.1"
rayon = "1.10.0"
tokio = {version = "1.38.0",features = ["full"]}
tokio-macros = "2.3.0"

[[bin]]
name="tokio_test_command"
path="./tests/1.rs"