[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.1.1"

[dependencies]
log = "0.3.9"
env_logger = "0.11.3"
mio = { path = "../mio-0.8.11", version = "0.8.11", features = ["net", "os-poll"] }
type-name-derive = { path = "./type-name-derive" }


[[bench]]
name = "example"
harness = false
