[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.1.1"

[dependencies]
log = "0.3.9"
env_logger = "0.11.3"
mio = { path = "../mio-0.8.11", version = "0.8.11", features = ["net", "os-poll"] }
type-name-derive = { path = "./type-name-derive" }
cargo_metadata = "0.18.1"
futures = "0.3.14"
futures-lite = "2.3.0"
async-io = "2.3"
async-task = "4.7"

[dev.dependencies]
flume = "0.11.0"

[[bench]]
name = "example"
harness = false

[[bin]]
name = "2a"
path = "./test/2a.rs"

[[bin]]
name = "2b"
path = "./test/2b.rs"


[[bin]]
name = "1972a"
path = "./test/1972a.rs"

[[bin]]
name = "103687a"
path = "./test/103687a.rs"

[[bin]]
name = "3c"
path = "./test/3c.rs"

[[bin]]
name = "4d"
path = "./test/4d.rs"

[[bin]]
name = "7b"
path = "./test/7b.rs"


[[bin]]
name = "7c"
path = "./test/7c.rs"

[[bin]]
name = "11b"
path = "test/11b.rs"

[[bin]]
name = "14c"
path = "test/14c.rs"

[[bin]]
name = "1974a"
path = "test/1974a.rs"

[[bin]]
name = "1974b"
path = "test/1974b.rs"

[[bin]]
name = "1974c_error"
path = "test/1974c_runtime_error.rs"

[[bin]]
name = "1974c"
path = "test/1974c.rs"

[[bin]]
name = "lifetime1"
path = "test/lifetime/1.rs"

[[bin]]
name = "reborrow"
path = "test/lifetime/2.rs"

[[bin]]
name = "lifetime2"
path = "test/lifetime/3.rs"

[[bin]]
name = "futures1"
path = "test/futures/4.rs"

[[bin]]
name = "futures2"
path = "test/futures/5.rs"


[[bin]]
name = "futures-lite-io-1"
path = "test/futures/6.rs"


[[bin]]
name = "async-io-1"
path = "test/futures/7.rs"

[[bin]]
name = "async-task-1"
path = "test/futures/8.rs"

