[package]
name = "actix-rt"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "actix_macros::*",
    "tokio::*",
]

[features]
default = ["macros"]
macros = ["actix-macros"]
io-uring = ["tokio-uring"]

[dependencies]
actix-macros = { path = "../actix-macros", optional = true }

futures-core = { version = "0.3", default-features = false }
tokio = { version = "1.23.1", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }

# runtime for `io-uring` feature
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.23.1", features = ["full"] }
